--- a/ChessBackend/Properties/launchSettings.json
+++ b/ChessBackend/Properties/launchSettings.json
@@ -1,23 +1,17 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5265",
+    "IISExpress": {
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "serverUrl": "http://localhost:5000"
     },
-    "https": {
+    "Project": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7136;http://localhost:5265",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "url": "http://localhost:5000"
     }
   }
 }
