--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.5",
     "chess.js": "^1.0.0-beta.8",
+    "chessboardjs": "^0.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.5",
-    "@angular/cli": "^19.0.5",
+    "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
